about section complete

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,6 +16,7 @@
 }
 .heading {
   font-size: 72px;
+  text-transform: capitalize;
   background: linear-gradient(to bottom, #194c33, #bbb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
