contact page done

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,7 +6,16 @@
 .image {
   height: 500px;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  animation: move 3s infinite ease alternate;
+}
+@keyframes move {
+  from {
+    transform: translateY(-10px);
+  }
+  to {
+    transform: translateY(10px);
+  }
 }
 .item {
   flex: 1;
