--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+.dark {
   background-color: #111;
   color: #bbb;
+}
+.light {
+  background-color: white;
+  color: #111;
 }
 a {
   text-decoration: none;
