--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,10 +1,11 @@
 .button {
   background: #53c194;
-  padding: 20px;
+  padding: 15px;
   width: max-content;
   border: none;
   cursor: pointer;
   border-radius: 5px;
   color: white;
   text-transform: capitalize;
+  font-size: 16px;
 }
